# SGGL

./: .gitignore  CMakeLists.txt  README.md  test
docs/: ARRANGE.md  SPECIFICATION_CN.md
inc/: _sggl_
inc/sggl/: config.h  core.h  family.h  platform.h  require.h  sggl.h
inc/sggl/family/: type.h
inc/sggl/glfw/: glfw.h  incglfw.h
inc/sggl/graphics/: glfw.h  opengl.h  vulkan.h
inc/sggl/graphics/glfw/: incglfw.h  initializer.h  terminater.h  window.h
inc/sggl/graphics/opengl/: access.h  attachment.h  buffer.h  buffer_type.h  buftype.h  color_type.h  filter_type.h  framebuffer.h  framebuffer_type.h  incogl.h  initializer.h  object.h  objtype.h  operator.h  program.h  renderbuffer.h  shader.h  shader_type.h  texture.h  texture_type.h  type.h  typeid.h  usage.h  usagetype.h  vertex_array.h  wrap_type.h
inc/sggl/graphics/vulkan/: incvk.h
inc/sggl/opengl/: incogl.h  object.h  objtype.h  opengl.h  vertex_array.h
inc/sggl/opengl/basic/: basic.h  buffer.h  buftype.h  initializer.h  object.h  objtype.h  program.h  shader.h  shader_type.h  typeid.h  usagetype.h  vertex_array.h
inc/sggl/platform/: compiler.h  cpu.h  host.h  lang.h
inc/sggl/vulkan/: incvk.h  vulkan.h
inc/sggl/win32/: incwin32.h  win32.h
test/: CMakeLists.txt  main.cpp
